# KoviD

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.txt  DISCLAIMER.md  INSTALL  LICENSE  Makefile  README.md  TODO.txt  lgtm.yml  run.sh
.github/workflows/: codeql.yml
demos/: README.md
docs/: Cheatsheet-UI-interface.md  ObfuscateKoviD.md  ReleaseNotes.md  ReleaseProcess.md  TestFeatures.md  UserGuide.md  cheatsheet-proc-interface.txt
inject/: Makefile  README.md  hello.c  kv_embed.S  kv_incbin.S  update.sh
scripts/: bdclient.sh  boottime.sh  install.sh  killswitch.sh
scripts/rustelf/: Cargo.toml
scripts/rustelf/src/: main.rs
src/: auto.h  bdkey.h  bpf.h  crypto.c  crypto.h  fs.c  fs.h  kovid.c  lkm.h  loadmodule.sh  log.h  netapp.h  obfstr.h  persist.S  pid.c  sock.c  sys.c  tty.c  tty.h  util.c  version.h  vm.c  whatever.c
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Artefacts/: id_rsa_qemu  id_rsa_qemu.pub  qemu-runner.sh
test/backdoors/: nc-backdoor.sh  nc-backdoor.test  nc-backdoor_host.sh  nc-backdoor_host.test
test/complex/: nc-pid-hide.test  nc-pid-hide_host.sh  nc-pid-hide_host.test
test/cross/: extract-base-address.sh  extract-base-address.test  hide-pid.sh  hide-pid.test  hide-unhide-module.sh  hide-unhide-module.test  no-kovid-found.sh  no-kovid-found.test  no-kovid-logs-in-deploy.sh  no-kovid-logs-in-deploy.test
test/dummy/: ls.test
test/features/: extract-base-address.sh  extract-base-address.test  hide-pid.sh  hide-pid.test  hide-unhide-module.test  no-kovid-found.test  no-kovid-logs-in-deploy.test
test/native/: backdoor-socket.test  base-address-elf.test  ftrace-disable-enable.test  get_bdkey.test  get_unhidekey.test  gift-bdclient.test  hidden-network.test  hide-but-read-dir-file.test  hide-dir-test-links.test  hide-unhide-module.test  hiden-file-in-all-dirs.test  hiden-file.test  inject.test  journal.test  kaudit.test  list-backdoors.test  list-hidden-files.test  list-hidden-tasks.test  nc-backdoor-bdclient.test  nc-backdoor-echo-s.test  nc-backdoor-plus-pid.test  nc-backdoor-remove-and-install-nc-tool.test  nc-backdoor.test  openssl-backdoor.test  proc-not-visible.test  proc-timeout.test  rename-hidden-task.test  send-signals-to-tasks.test  simple-insmod-hello-ko.test  simple-insmod-lkm.test  syslog-clear.test  taint-clear.test  tty-backdoor.test  unhide-module.test
test/native/Inputs/: Makefile  a.testexe  hello.c  simple-test.c
tests/: Cargo.toml  gen-certs.sh  test.c  test_fork.c
tests/tst/src/: main.rs
tools/: obfstr.c
tools/ebpf/: Makefile  README.md  filter_ebpf_kovid.py  main.c  socket_filter_bpf.c
tools/rust/: Cargo.toml
tools/rust/src/: main.rs
tools/src/: main.rs
